Fix Civic Tech 101 YouTube video

--- a/civic-tech-101.html
+++ b/civic-tech-101.html
@@ -15,7 +15,7 @@ description: New to civic tech? Learn what it is, why it matters, and how you ca
   <div class="container">
     <div class="page-content">
       <div class="video-wrapper">
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/DBmL-dHM0IE" title="What is Civic Tech?" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/SbClU_S8zNw" title="What is Civic Tech?" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
       </div>
 
       <h2>What is Civic Tech?</h2>
